--- a/asyncApp/api.html
+++ b/asyncApp/api.html
@@ -68,6 +68,33 @@
 
         <!-- Our Scripts  -->
         <script src="./asset/js/loadPostsAPI.js"></script>
+        <script type="text/javascript"> 
+            var myDate = new Date(); 
+            var myDay = myDate.getDay(); 
+            
+            // Array of days. 
+            // var weekday = ['Sunday', 'Monday', 'Tuesday', 
+            //     'Wednesday', 'Thursday', 'Friday', 'Saturday' 
+            // ]; 
+
+            const day = document.querySelector("#timerDemo");
+           //day.innerText = "Today is : " + weekday[myDay]; 
+            //day.innerText = "<br/>"; 
+            
+            // get hour value. 
+            const nowDate = new Date();
+            const nowDateString = nowDate.getHours() + ":" + nowDate.getMinutes() + ":" + nowDate.getSeconds() 
+
+            // var hours = myDate.getHours(); 
+            // var ampm = hours >= 12 ? ' PM' : ' AM'; 
+            // hours = hours % 12; 
+            // hours = hours ? hours : 12; 
+            // var minutes = myDate.getMinutes(); 
+            // minutes = minutes < 10 ? '0' + minutes : minutes; 
+            // var myTime = hours + " " + " : " + minutes +  
+            //     " : " + ampm ; 
+            day.innerText =   nowDateString; 
+        </script> 
 
 </body>
 
