--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>An example with images sliding from right to left</title>
+    <title>Slider</title>
     <style>
       #myslider { width:612px; height:612px; }
     </style>
@@ -14,7 +14,7 @@
       <img src="https://picsum.photos/612/612?random=2"/>
     </div>
   </body>
-  <script src="./assets/js/simpleslider.js"></script>
+  <script src="./assets/js/slider.js"></script>
   <script>
     var imgSlider = simpleslider.getSlider({
       container: document.getElementById('myslider'),
