--- a/asyncApp/api.html
+++ b/asyncApp/api.html
@@ -56,7 +56,7 @@
             </div>
             <div class="ui segment">
 
-                <div class="ui active dimmer" id="loader" style="height: 500px;">
+                <div class="ui active dimmer" id="loader" style="height: 500px;background-color: brown;">
                     <div class="ui text loader">Loading</div>
                 </div>
 
